--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run test:staging
-    - name: SSH Remote Commands
-      uses: appleboy/ssh-action@v0.1.2
+    # - run: npm run test:staging
+    # - name: SSH Remote Commands
+    #   uses: appleboy/ssh-action@v0.1.2
       with:
         server: ftp.vcanaglobal.ga
         username: vglobal@vcananewweb.vcanaglobal.ga
